# fandanGO-aria

./: .env.example  .gitignore  LICENSE.txt  MANIFEST.in  README.md  cli.py  example_config.yml  osv-scanner.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: osv-scanner.yml  python-package.yml  python-publish.yml
aria_data_deposition/: config.py  utils.py
aria_data_deposition/classes/: aria_client.py  bucket.py  bucket_manager.py  client.py  data_manager.py  do_something.py  field.py  oauth.py  record.py  visit.py
cli/: cli.py
cli/commands/: create_bucket.py  create_field.py  create_record.py  get_token_password.py  get_visits.py  help.py  list_buckets.py  list_fields.py  list_records.py  login.py  set_token_password.py
docs/: data_depositioning_sequence.puml
fGOaria/: __init__.py  api_client.py  bucket.py  client_data_manager.py  client_entity_manager.py  client_oauth.py  constants.py  data_manager.py  entity_manager.py  field.py  imports_config.py  oauth.py  record.py  token.py  visit.py
fGOaria/actions/: deposit_field.py
fGOaria/classes/: api_client.py  aria_client.py  aria_manager.py  bucket.py  cli_data_manager.py  cli_techeval.py  client_data_manager.py  credentials.py  (+16 more)
fandango/: __init__.py  abstract_bucket.py  abstract_field.py  abstract_record.py  api_client.py  aria_client.py  bucket.py  bucket_manager.py  cli_data_manager.py  client_data_manager.py  client_entity_manager.py  client_oauth.py  config.py  data_manager.py  entity_manager.py  field.py  oauth.py  record.py  token.py  utils.py  visit.py
tests/: StorageManagerTestCase.py  test_case.py  test_file3.txt  test_storage_file_management.py  test_storage_manager.py  test_storage_provisioning.py
(+25 files in other folders)
