[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fandanGO-aria"
version = "2.2.5"
description = "Short package description"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "FragmentScreen" }
]
dependencies = [
    "requests>=2.32.4",
    "urllib3>=2.5.0",
    "prompt_toolkit>=3.0.51",
    "click>=8.1.8",
    "cryptography>=48.0.1",
    "keyring>=25.6.0",
    "python-dotenv>=1.1.1",
    "PyYAML>=6.0.2",
    "questionary>=2.1.0"
]

[tool.setuptools]
packages = ["fGOaria"]

[project.scripts]
fandango-aria = "fGOaria.commands.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.3.0",
  "pre-commit>=3.5.0"
]