[project]
name = "fandanGO-aria"
version = "2.2.5"
description = "A Python client library and CLI tool for interfacing with ARIA within the FandanGO ecosystem"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "FragmentScreen" }]
dependencies = [
  "PyYAML>=6.0.2",
  "click>=8.1.8",
  "cryptography>=48.0.1",
  "keyring>=25.6.0",
  "prompt_toolkit>=3.0.51",
  "python-dotenv>=1.1.1",
  "questionary>=2.1.0",
  "requests>=2.32.4",
  "urllib3>=2.5.0"
]

[project.scripts]
fandango-aria = "fGOaria.commands.cli:main"

[dependency-groups]
dev = ["pre-commit>=3.5.0", "pytest>=8.0.0", "pytest-cov>=4.0.0", "ruff>=0.3.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fGOaria*"]
